# taxiride-ny-pipeline

./: .gitignore  Makefile  pyproject.toml
src/taxiride_ny_pipeline/: __init__.py  ingest.py  params.py
terraform/: iam.tf  storage.tf  terraform.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
