[project]
name = "taxiride-ny-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "julien domagalski", email = "julien.domagalski@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.33.0",
]

[project.scripts]
taxiride-ny-pipeline = "taxiride_ny_pipeline:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
